tests/snapshots/codegen_snapshot_tests__std_registry_type_token.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
#[inline(always)]
pub(crate) fn __incan_init_module_statics() {
    static __INCAN_STATIC_INIT_RUNNING: std::sync::atomic::AtomicBool = std::sync::atomic::AtomicBool::new(
        false,
    );
    if __INCAN_STATIC_INIT_RUNNING.load(std::sync::atomic::Ordering::Acquire) {
        return;
    }
    static __INCAN_STATIC_INIT_ONCE: std::sync::OnceLock<()> = std::sync::OnceLock::new();
    __INCAN_STATIC_INIT_ONCE
        .get_or_init(|| {
            struct __IncanStaticInitGuard<'a>(&'a std::sync::atomic::AtomicBool);
            impl Drop for __IncanStaticInitGuard<'_> {
                fn drop(&mut self) {
                    self.0.store(false, std::sync::atomic::Ordering::Release);
                }
            }
            __INCAN_STATIC_INIT_RUNNING
                .store(true, std::sync::atomic::Ordering::Release);
            let _guard = __IncanStaticInitGuard(&__INCAN_STATIC_INIT_RUNNING);
            std::sync::LazyLock::force(&functions);
            let _ = {
                let __incan_static_arg_0 = FunctionId("normalize".to_string());
                let __incan_static_arg_1 = FunctionSpec {
                    target: incan_stdlib::reflection::TypeToken::<i64>::new(),
                };
                let __incan_static_arg_2 = "std_registry_type_token.normalize"
                    .to_string();
                {
                    functions
                        .with_mut(|__incan_static_value| {
                            __incan_static_value
                                ._describe_function(
                                    __incan_static_arg_0,
                                    __incan_static_arg_1,
                                    __incan_static_arg_2,
                                )
                        })
                }
            };
        });
}
pub use crate::__incan_std::registry::Registry;
pub use crate::__incan_std::registry::SubjectKind;
pub use crate::__incan_std::registry::describe;
#[derive(Debug, Clone, Eq, PartialEq)]
struct FunctionId(pub String);
impl incan_stdlib::reflection::HasTypeClassName for FunctionId {
    fn __class_name__() -> &'static str {
        "FunctionId"
    }
}
#[derive(Debug, Clone, incan_derive::FieldInfo, incan_derive::IncanClass)]
struct FunctionSpec {
    #[expect(dead_code, reason = "retained for Incan private field semantics")]
    target: incan_stdlib::reflection::TypeToken<i64>,
}
impl incan_stdlib::reflection::HasClassName for FunctionSpec {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_stdlib::reflection::HasTypeClassName>::__class_name__()
    }
}
impl incan_stdlib::reflection::HasTypeClassName for FunctionSpec {
    fn __class_name__() -> &'static str {
        "FunctionSpec"
    }
}
impl incan_stdlib::reflection::HasFieldMetadata for FunctionSpec {
    fn __fields__(
        &self,
    ) -> incan_stdlib::frozen::FrozenList<incan_stdlib::reflection::FieldInfo> {
        <Self as incan_stdlib::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl incan_stdlib::reflection::HasTypeFieldMetadata for FunctionSpec {
    fn __fields__() -> incan_stdlib::frozen::FrozenList<
        incan_stdlib::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_stdlib::reflection::FieldInfo; 1] = [
            incan_stdlib::reflection::FieldInfo {
                name: incan_stdlib::frozen::FrozenStr::new("target"),
                alias: None,
                description: None,
                wire_name: incan_stdlib::frozen::FrozenStr::new("target"),
                type_name: incan_stdlib::frozen::FrozenStr::new("Type[int]"),
                has_default: false,
                extra: incan_stdlib::frozen::FrozenDict::new(&[]),
            },
        ];
        incan_stdlib::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
pub static functions: std::sync::LazyLock<
    incan_stdlib::storage::StaticCell<Registry<FunctionId, FunctionSpec>>,
> = std::sync::LazyLock::new(|| incan_stdlib::storage::StaticCell::new(
    Registry::define(vec![SubjectKind::Function.clone()]),
));
pub fn normalize(value: String) -> String {
    __incan_init_module_statics();
    return incan_stdlib::strings::str_lower(&incan_stdlib::strings::str_strip(&value));
}
fn main() {
    __incan_init_module_statics();
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let entries = {
        {
            __incan_init_module_statics();
            functions
                .with_mut(|__incan_static_value| {
                    __incan_static_value.loaded_entries()
                })
        }
    };
    let _ = if ::std::convert::identity(entries.len() as i64) != 1 {
        panic!("AssertionError: left != right");
    };
    let _ = if incan_stdlib::strings::str_ne(
        &normalize("  INCAN  ".to_string()),
        &"incan",
    ) {
        panic!("AssertionError: left != right");
    };
}
