tests/snapshots/codegen_snapshot_tests__std_tempfile_import.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
pub use crate::__incan_std::fs::Path;
pub use crate::__incan_std::tempfile::NamedTemporaryFile;
pub use crate::__incan_std::tempfile::SpooledTemporaryFile;
pub use crate::__incan_std::tempfile::TemporaryDirectory;
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let spool = crate::__incan_std::tempfile::SpooledTemporaryFile(4);
    let __ = spool.rolled_to_disk();
    let _ = println!("{}", "std.tempfile import codegen");
}
