tests/snapshots/codegen_snapshot_tests__std_testing_compiled.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
/// Explicitly fail a test with a message.
///
/// Fail makes the program raise a panic.
///
/// Example:
///
/// ```ignore
/// fail("this test should not reach here")
/// ```
pub fn fail(msg: String) {
    let _ = "Explicitly fail a test with a message.\n\n    Fail makes the program raise a panic.\n\n    Example:\n    \n    ```incan\n    fail(\"this test should not reach here\")\n    ```\n    ";
    return fail_t(msg);
}
/// Generic failure primitive for helper functions returning `T`.
///
/// This always fails by delegating to the host panic boundary, but has a generic return type so assertion helpers -
/// like `assert_is_some()` - can typecheck cleanly.
///
/// Example:
///
/// ```ignore
/// return fail_t("assertion failed")
/// ```
pub fn fail_t<T>(msg: String) -> T {
    incan_std_testing::fail_t::<T>(msg)
}
/// Skip a test unconditionally.
///
/// Example:
///
/// ```ignore
/// @skip("not implemented yet")
/// def test_future_feature() -> None:
///     pass
/// ```
///
/// Note: Marker decorators are consumed by `incan test` during discovery.
///       Their runtime implementation stays a host boundary so metadata remains parseable in this declaration surface.
pub fn skip(reason: String) {
    incan_std_testing::skip(reason)
}
/// Mark a function as a test even when its name does not start with `test_`.
///
/// Example:
///
/// ```ignore
/// @test
/// def checks_total() -> None:
///     assert_eq(total(), 42)
/// ```
///
/// Note: Marker decorators are consumed by `incan test` during discovery.
///       Their runtime implementation stays a host boundary so metadata remains parseable in this declaration surface.
pub fn test() {
    incan_std_testing::test()
}
/// Skip a test when a collection-time condition is true.
///
/// Supported conditions are literals, boolean operators, string equality against `platform()`, and `feature("name")`.
pub fn skipif(condition: bool, reason: String) {
    incan_std_testing::skipif(condition, reason)
}
/// Mark a test as expected to fail.
///
/// The test runs but failure is not reported as an error.
/// If the test passes unexpectedly, it's reported as XPASS.
///
/// Example:
///
/// ```ignore
/// @xfail("known bug #123")
/// def test_known_issue() -> None:
///     assert broken_function() == "fixed"
/// ```
///
/// Note: Marker decorators are consumed by `incan test` during discovery.
///       Their runtime implementation stays a host boundary so metadata remains parseable in this declaration surface.
pub fn xfail(reason: String) {
    incan_std_testing::xfail(reason)
}
/// Expect a test to fail when a collection-time condition is true.
///
/// Supported conditions are literals, boolean operators, string equality against `platform()`, and `feature("name")`.
pub fn xfailif(condition: bool, reason: String) {
    incan_std_testing::xfailif(condition, reason)
}
/// Return the platform name used by collection-time testing marker probes.
///
/// `incan test` evaluates this during collection; runtime calls return the host OS identifier.
pub fn platform() -> String {
    incan_std_testing::platform()
}
/// Return whether an `incan test --feature <name>` collection feature is enabled.
///
/// Runtime calls return false because collection features are runner metadata, not application configuration.
pub fn feature(name: String) -> bool {
    incan_std_testing::feature(name)
}
/// Mark a test as slow.
///
/// Slow tests are excluded by default. Run with --slow to include.
///
/// Example:
///
/// ```ignore
/// @slow
/// def test_integration() -> None:
///     # Long-running test
///     pass
/// ```
///
/// Note: Marker decorators are consumed by `incan test` during discovery.
///       Their runtime implementation stays a host boundary so metadata remains parseable in this declaration surface.
pub fn slow() {
    incan_std_testing::slow()
}
/// Attach a named marker to a test for `incan test -m` selection.
///
/// Marker names should use snake_case. With `--strict-markers`, names must be registered by TEST_MARKERS.
pub fn mark(name: String) {
    incan_std_testing::mark(name)
}
/// Attach resource metadata to a test.
///
/// `incan test --jobs N` will not overlap tests that share the same resource key.
pub fn resource(name: String) {
    incan_std_testing::resource(name)
}
/// Attach serial-execution metadata to a test.
///
/// `incan test --jobs N` runs serial tests alone against all other scheduled units.
pub fn serial() {
    incan_std_testing::serial()
}
/// Set the timeout used for the generated test batch that contains this test, such as "250ms", "5s", or "2m".
pub fn timeout(duration: String) {
    incan_std_testing::timeout(duration)
}
/// Mark a function as a test fixture.
///
/// Fixtures provide setup values and dependency injection for tests. Function scope runs per test. Module/session
/// scopes are cached inside the generated per-file test harness process. One top-level `yield` statement splits setup
/// from teardown for function-scoped fixtures; teardown code cannot reference setup locals or fixture parameters in the
/// current runner transform.
///
/// Example:
///
/// ```ignore
/// @fixture
/// def temp_name() -> str:
///     return "scratch.txt"
///
/// def test_write(temp_name: str) -> None:
///     assert temp_name == "scratch.txt"
/// ```
///
/// Note: Fixtures are injected by parameter name matching.
pub fn fixture() {
    incan_std_testing::fixture()
}
/// Run a test with multiple parameter sets.
///
/// Example:
///
/// ```ignore
/// @parametrize("x, y, expected", [
///     (1, 2, 3),
///     (0, 0, 0),
///     (-1, 1, 0),
///     (100, 200, 300),
/// ])
/// def test_add(x: int, y: int, expected: int) -> None:
///     assert add(x, y) == expected
/// ```
///
/// This generates:
///
/// ```ignore
/// test_add[1-2-3] ... PASSED
/// test_add[0-0-0] ... PASSED
/// test_add[-1-1-0] ... PASSED
/// test_add[100-200-300] ... PASSED
/// ```
pub fn parametrize<T>(argnames: String, argvalues: Vec<T>) {
    incan_std_testing::parametrize::<T>(argnames, argvalues)
}
/// Attach metadata to one parameter set inside `parametrize`.
pub fn param_case<T>(value: T, marks: Vec<String>, id: String) -> T {
    incan_std_testing::param_case::<T>(value, marks, id)
}
/// Assert condition is true.
///
/// Example:
///
/// ```ignore
/// assert(False, "This test will fail with this message")
/// ```
///
/// Note: Prefer plain `assert left == right` for most cases.
pub fn assert(condition: bool, msg: String) {
    let _ = "Assert condition is true.\n\n    Example:\n\n    ```incan\n    assert(False, \"This test will fail with this message\")\n    ```\n\n    Note: Prefer plain `assert left == right` for most cases.\n    ";
    if !condition {
        let _ = fail(msg);
    }
}
/// Assert two values are equal.
///
/// Prefer plain `assert left == right` for most cases.
///
/// Example:
///
/// ```ignore
/// assert_eq(result, expected, "calculation was wrong")
/// ```
pub fn assert_eq<T: PartialEq>(left: T, right: T, msg: String) {
    let _ = "\n    Assert two values are equal.\n\n    Prefer plain `assert left == right` for most cases.\n\n    Example:\n\n    ```incan\n    assert_eq(result, expected, \"calculation was wrong\")\n    ```\n    ";
    if left != right {
        let _ = fail(msg);
    }
}
/// Assert two values are not equal.
pub fn assert_ne<T: PartialEq>(left: T, right: T, msg: String) {
    let _ = "Assert two values are not equal.";
    if left == right {
        let _ = fail(msg);
    }
}
/// Assert condition is true.
pub fn assert_true(condition: bool, msg: String) {
    let _ = "Assert condition is true.";
    if !condition {
        let _ = fail(msg);
    }
}
/// Assert condition is false.
pub fn assert_false(condition: bool, msg: String) {
    let _ = "Assert condition is false.";
    if condition {
        let _ = fail(msg);
    }
}
/// Assert Option is Some and return the value.
///
/// Example:
///
/// ```ignore
/// value = assert_is_some(get_user(id))
/// assert value.name == "Alice"
/// ```
pub fn assert_is_some<T>(option: Option<T>, msg: String) -> T {
    let _ = "\n    Assert Option is Some and return the value.\n\n    Example:\n\n    ```incan\n    value = assert_is_some(get_user(id))\n    assert value.name == \"Alice\"\n    ```\n    ";
    let _ = match option {
        Some(value) => {
            return value;
        }
        None => {
            return fail_t(msg);
        }
    };
}
/// Assert Option is None.
pub fn assert_is_none<T>(option: Option<T>, msg: String) {
    let _ = "Assert Option is None.";
    let _ = match option {
        Some(_) => fail(msg),
        None => {
            return;
        }
    };
}
/// Assert Result is Ok and return the value.
///
/// Example:
///
/// ```ignore
/// user = assert_is_ok(fetch_user(id))
/// assert user.active
/// ```
pub fn assert_is_ok<T, E>(result: Result<T, E>, msg: String) -> T {
    let _ = "\n    Assert Result is Ok and return the value.\n\n    Example:\n\n    ```incan\n    user = assert_is_ok(fetch_user(id))\n    assert user.active\n    ```\n    ";
    let _ = match result {
        Ok(value) => {
            return value;
        }
        Err(_) => {
            return fail_t(msg);
        }
    };
}
/// Assert Result is Err and return the error.
pub fn assert_is_err<T, E>(result: Result<T, E>, msg: String) -> E {
    let _ = "Assert Result is Err and return the error.";
    let _ = match result {
        Err(err) => {
            return err;
        }
        Ok(_) => {
            return fail_t(msg);
        }
    };
}
/// Assert that a zero-argument block raises/panics with error type E.
///
/// The compiler recognizes this helper at call sites and emits runtime panic-payload matching.
///
/// Example:
///
/// ```ignore
/// def bad_parse() -> None:
///     int("not a number")
///
/// assert_raises[ValueError](bad_parse)
/// ```
pub fn assert_raises<E>(_: fn() -> (), msg: String) {
    let _ = "\n    Assert that a zero-argument block raises/panics with error type E.\n\n    The compiler recognizes this helper at call sites and emits runtime panic-payload matching.\n\n    Example:\n\n    ```incan\n    def bad_parse() -> None:\n        int(\"not a number\")\n\n    assert_raises[ValueError](bad_parse)\n    ```\n    ";
    if incan_std_core::strings::str_eq(&msg, &"") {
        return fail_t(
            "std.testing.assert_raises requires compiler lowering".to_string(),
        );
    }
    return fail_t(msg);
}
