tests/snapshots/codegen_snapshot_tests__std_traits_callable_compiled.snap
---
source: tests/codegen_snapshot_tests.rs
expression: rust_code
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
pub trait Callable0<R> {
    fn __call__(&self) -> R;
}
pub trait Callable1<A, R> {
    fn __call__(&self, arg: A) -> R;
}
pub trait Callable2<A, B, R> {
    fn __call__(&self, a: A, b: B) -> R;
}
