tests/snapshots/codegen_snapshot_tests__std_traits_convert_compiled.snap
---
source: tests/codegen_snapshot_tests.rs
expression: rust_code
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
pub trait From<T> {
    fn from(value: T) -> Self
    where
        Self: Sized;
}
pub trait Into<T> {
    fn into(&self) -> T;
}
pub trait TryFrom<T> {
    fn try_from(value: T) -> Result<Self, String>
    where
        Self: Sized;
}
pub trait TryInto<T> {
    fn try_into(&self) -> Result<T, String>;
}
